--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 html {
   box-sizing: border-box;
-  height: 100vh; }
+  height: 100%; }
 
 body {
   background: url(/cover.jpg) no-repeat center center fixed;
@@ -15,6 +15,8 @@ body {
   color: #fff;
   height: 100%;
   display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   grid-template-areas: "header header header header header header" ". main main main main ." ". main main main main ." "footer footer footer footer footer footer"; }
   body:after {
     position: absolute;
@@ -68,6 +70,9 @@ a {
 nav {
   grid-area: header;
   grid-template-areas: "logo item item toggle-top"; }
+  @media screen and (max-width: 600px) {
+    nav ul {
+      display: none; } }
 
 .top-nav {
   align-items: center; }
@@ -79,7 +84,7 @@ nav {
     grid-area: item; }
     @media screen and (max-width: 600px) {
       .top-nav__items {
-        top: 13%; } }
+        top: 15%; } }
 
 .nav-toggle {
   margin-left: auto;
@@ -104,14 +109,15 @@ nav {
   display: flex;
   flex-direction: column;
   width: 100%;
-  margin: auto; }
+  margin: auto;
+  position: relative; }
 
 main {
   grid-area: main;
-  margin: 0 4rem;
+  align-items: center;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-gap: 1rem;
+  grid-gap: 3rem;
   grid-template-areas: "description form" "description form"; }
   @media screen and (max-width: 768px) {
     main {
@@ -129,7 +135,7 @@ main {
     padding-top: 1rem; }
     @media screen and (max-width: 768px) {
       .description__heading {
-        font-size: 1.5rem; } }
+        font-size: 2rem; } }
   .description__subtext {
     margin-top: 1rem;
     font-weight: normal; }
@@ -192,10 +198,14 @@ footer {
   display: grid;
   grid-template-areas: "rights nav nav";
   width: 100vw;
-  font-size: 0.8rem; }
+  font-size: 0.8rem;
+  align-items: center; }
   @media screen and (max-width: 768px) {
     footer {
       grid-template-areas: "rights toggle-bottom"; } }
+  @media screen and (max-width: 499px) {
+    footer {
+      align-items: end; } }
 
 .rights {
   grid-area: rights;
@@ -211,7 +221,7 @@ footer {
       display: none; } }
   @media screen and (max-width: 600px) {
     .bottom-nav__items {
-      bottom: 13%;
+      bottom: 15%;
       text-transform: capitalize; } }
 
 .bottom {
